Fix Category Alignment. Fixes #65.
Former-commit-id: 648aec8a5695f484c29a05787faa9f983ceb06d2
Former-commit-id: b7dd5c5e24209ed213518327427403a6da650cf5
Former-commit-id: 8926f2466670a544a372e8a21a6340e79f15a222
Former-commit-id: 2f76f5800eacdc02cd47f91777745e8cedc27336
Former-commit-id: 3752ac0d6ea720107114b7ea3aa18f8792f40871
Former-commit-id: a4e026df0b10caf763c6c351fe171fc283b58187

--- a/podiobooks/themes/pb2-jq/css/styles.css
+++ b/podiobooks/themes/pb2-jq/css/styles.css
@@ -295,6 +295,11 @@ p{
     height: 27px;
 }
 
+.title-list-bar .category {
+    float: right;
+    margin-right: 7px;
+}
+
 .title-list-text {
 
 }
